# proxima-centauri

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
proxima_centauri/: .env.example  Cargo.toml
proxima_centauri/files/: db.csv
proxima_centauri/lib/: auth.rs  config.rs  context.rs  handler.rs  lib.rs  limiter.rs  registry.rs  server.rs  statistics.rs
proxima_centauri/lib/http_utils/: response.rs
proxima_centauri/lib/tests/: integration_tests.rs
proxima_centauri/lib/tests/common/: request.rs
proxy_centauri/: Cargo.toml
proxy_centauri/lib/: auth.rs  database.rs  handler.rs  lib.rs  server.rs  statistics.rs  tunnel.rs
proxy_centauri/lib/http_utils/: response.rs
proxy_centauri/lib/tests/: integration_tests.rs
proxy_centauri/lib/tests/common/: request.rs
src/: .env.example  Cargo.toml
src/files/: db.csv.example
src/lib/: auth.rs  config.rs  context.rs  handler.rs  lib.rs  registry.rs  server.rs  source.rs  tunnel.rs
src/lib/tests/: integration_tests.rs
src/lib/tests/common/: request.rs
