[workspace]
members = [
    "src",
]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/IDrokin117/proxima-centauri"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "allow", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
