[package]
name = "proxy_centauri"
version = "0.1.0"
edition = "2024"
authors = ["Igor Drokin"]
repository = "https://github.com/IDrokin117/proxy-centauri"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dotenv = "0.15.0"
httparse = "1.10.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[lib]
path = "lib/lib.rs"

[[bin]]
name = "procent"
path = "bin/main.rs"
